Add term col to user registration
