# app/Http/Controllers/UserController.php
@@ -73,6 +73,7 @@ class UserController extends ApiController
      *   @SWG\Parameter( name="avatar", description="User avatar in base64 encode", required=false, type="base64", in="query"),
      *   @SWG\Parameter( name="password", description="User password", required=true, type="string", in="query"),
      *   @SWG\Parameter( name="password_confirmation", description="User confirmation password", required=true, type="string", in="query"),
+     *   @SWG\Parameter( name="terms", description="check terms of use", required=true, type="boolean", in="query"),
      *   @SWG\Response( response=201, description="Success create new user"),
      *   @SWG\Response( response=422, description="Validation errors"),
      * )
