# public/docs/swagger.json
@@ -322,6 +322,13 @@
                         "description": "User confirmation password",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "name": "terms",
+                        "in": "query",
+                        "description": "check terms of use",
+                        "required": true,
+                        "type": "boolean"
                     }
                 ],
                 "responses": {
